--- a/Desktop/laxman/chat-app/src/Assets/CSS/DashbordStyle.css
+++ b/Desktop/laxman/chat-app/src/Assets/CSS/DashbordStyle.css
@@ -1,18 +1,3 @@
-/* 1st #DDE4F0 */
-/* 2nd #A8BADD */
-
-/* ============primary color======= */
-/* 3rd #081d34 */
-/* ================================== */
-
-/*4rth #1E3CBF */
-/* 5th #939DAE */
-/* 6th #485563 */
-/* 7n  #827896 */
-
-/* typograpy  */
-/*  1.5rem */
-
 .logout-wrapper {
   width: 100%;
   display: flex;
@@ -21,7 +6,7 @@
 
 .sidebar {
   /* min-width: 75px; */
-  max-width: 5.5rem;
+  max-width: 6rem;
   /* padding: 1.1rem 0 0.3rem 0; */
   min-height: 100vh;
   background-color: #081d34;
@@ -37,12 +22,22 @@
   color: white;
 }
 
-.navbar-nav .nav-item {
+.navbar-nav .nav-item .item {
   margin: 0.5rem 0.3rem;
+  color: var(--secondary-shade-2);
+}
+
+.navbar-nav .nav-item .item:hover {
+  color: white;
 }
 
 .icon-section {
   color: #a8badd;
+}
+
+.sidebar-icon:hover,
+.paragraph:hover {
+  color: white;
 }
 
 .icon-section:hover {
@@ -52,6 +47,7 @@
 .sidebar-icon {
   font-size: 1.5rem;
   margin-bottom: 0.8rem;
+  /* color: var(--secondary-shade-2); */
 }
 
 /* ================================================ */
@@ -117,10 +113,10 @@
   margin-bottom: 0.6rem;
 }
 
-.user-list-item,
+/* .user-list-item,
 a:hover {
   background-color: var(--secondary-shade-1);
-}
+} */
 
 /* client chat section */
 
